<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="349dp"
        tools:layout_editor_absoluteY="187dp">

        <EditText
            android:id="@+id/website_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_website" />

        <Button
            android:id="@+id/open_website_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:onClick="openWebsite"
            android:text="@string/button_website" />

        <EditText
            android:id="@+id/location_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_location" />

        <Button
            android:id="@+id/location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:onClick="openLocation"
            android:text="@string/button_location" />

        <EditText
            android:id="@+id/share_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="sharing"/>

        <Button
            android:id="@+id/share_text_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:onClick="ShareText"
            android:text="@string/button_share" />

    </LinearLayout>

    <!--    <TextView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Hello World!"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>